fix: Maintain screenshot aspect ratios on smaller screens (#99)

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -163,6 +163,7 @@ table.statistics {
 .screenshot {
     border: 1px solid var(--tertiary-background-color);
     max-width: 90%;
+    height: auto;
 }
 
 ul.applications {
